<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainCoconut1ImageView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:scaleType="fitEnd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/coconut_1"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <include layout="@layout/main_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/startedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="130dp"
        android:text="@string/mainGetStarted"
        android:pointerIcon="hand"
        android:textColor="@color/primary_state"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="22sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact1"
            android:pointerIcon="hand"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/contactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact2"
            android:pointerIcon="hand"
            android:textColor="@color/primary_state"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            />
    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp">

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:pointerIcon="hand"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:pointerIcon="hand"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="18sp"
            />

    </LinearLayout>
    -->
</RelativeLayout>